--- a/templates/includes/show_message.html
+++ b/templates/includes/show_message.html
@@ -12,7 +12,7 @@
         <span>
             {% if (message not in g.user.likes) and (message.user_id != g.user.id) %}
             <a href="/users/add_like/{{message.id}}"><i class="far fa-star"></i></a>
-            {% else %}
+            {% elif message.user_id != g.user.id %}
             <a href="/users/delete_like/{{message.id}}"><i class="fas fa-star"></i></a>
             {% endif %}
 
