made homepage messages consistent with liked-messages

--- a/templates/home.html
+++ b/templates/home.html
@@ -31,6 +31,12 @@
               <a href="/users/{{ g.user.id }}/followers">{{ g.user.followers | length }}</a>
             </h4>
           </li>
+          <li class="stat">
+            <p class="small">Likes</p>
+            <h4>
+              <a href="/users/{{ g.user.id }}/likes">{{ g.user.likes | length }}</a>
+            </h4>
+          </li>
         </ul>
       </div>
     </div>
@@ -38,37 +44,8 @@
 
   <div class="col-lg-6 col-md-8 col-sm-12">
     <ul class="list-group" id="messages">
-      {% for msg in messages %}
-      <li class="list-group-item">
-
-        <a href="/messages/{{ msg.id  }}" class="message-link" />
-        <a href="/users/{{ msg.user.id }}">
-          <img src="{{ msg.user.image_url }}" alt="" class="timeline-image">
-        </a>
-        <div class="message-area">
-          <a href="/users/{{ msg.user.id }}">@{{ msg.user.username }}</a>
-          <span class="text-muted">{{ msg.timestamp.strftime('%d %B %Y') }}</span>
-          <p>{{ msg.text }}</p>
-        </div>
-        {% if msg.id in liked_message_ids %}
-        <form method="POST" action="/users/delete_like/{{ msg.id }}" id="messages-form">
-          <button class="
-                btn 
-                btn-sm 
-                {{'btn-primary' if msg.id in likes else 'btn-secondary'}}">
-            <i class="fa fa-star gold"></i>
-          </button>
-          {% else %}
-          <form method="POST" action="/users/add_like/{{ msg.id }}" id="messages-form">
-            <button class="
-                btn 
-                btn-sm 
-                {{'btn-primary' if msg.id in likes else 'btn-secondary'}}">
-              <i class="fa fa-thumbs-up"></i>
-            </button>
-            {% endif %}
-          </form>
-      </li>
+      {% for message in messages %}
+      {% include 'includes/show_message.html' %}
       {% endfor %}
     </ul>
   </div>
